# chip8

./: .gitignore  CMakeLists.txt  README.md
include/: chip8.h
src/: chip8.c  main.c
